Bug #1830797: Left-align lang strings
behatnotneeded

--- a/htdocs/theme/raw/sass/features/_notification.scss
+++ b/htdocs/theme/raw/sass/features/_notification.scss
@@ -17,6 +17,11 @@
         @include media-breakpoint-up(sm) {
             float: left;
         }
+        .activity-buttons {
+            .btn {
+                text-align: left;
+            }
+        }
     }
     .form-select-filter {
         margin-top: 10px;
